<resources>
    <string name="app_name">MyNotePad</string>
    <string name="live_folder_name">Notes</string>

    <string name="title_edit_title">Note title:</string>
    <string name="title_create">New note</string>
    <string name="title_edit">Title: %1$s</string>
    <string name="title_notes_list">Notes</string>

    <string name="menu_add">New note</string>
    <string name="menu_save">Save</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_open">Open</string>
    <string name="menu_revert">Revert changes</string>
    <string name="menu_copy">Copy</string>
    <string name="menu_paste">NewNote</string>

    <string name="button_ok">OK</string>
    <string name="text_title">Title:</string>

    <string name="resolve_edit">Edit note</string>
    <string name="resolve_title">Edit title</string>

    <string name="error_title">Error</string>
    <string name="error_message">Error loading note</string>
    <string name="nothing_to_save">There is nothing to save</string>
    <string name="font_size">字体大小</string>
    <string name="font10">10</string>
    <string name="font12">12</string>
    <string name="font16">16</string>
    <string name="font20">20</string>
    <string name="font_color">字体颜色</string>
    <string name="red_title">红色字体</string>
    <string name="yellow_title">黄色字体</string>
    <string name="black_title">黑色字体</string>
    <string name="menu_color">更换颜色</string>
</resources>